--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         </div>
         <div class="container">
             <div class="row">
+                <iframe style="background: #F1F5F4;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);width: 100vw;height: 100vh;"  src="https://charts.mongodb.com/charts-project-0-cbgqy/embed/dashboards?id=649a786a-1cdd-4f83-8b7f-77b3449e6d2a&theme=light&autoRefresh=true&maxDataAge=3600&showTitleAndDesc=true&scalingWidth=scale&scalingHeight=scale"></iframe>
                 <div class="col-md-6 col-lg-3 text-center">
                     <div class="mx-auto service-box mt-5"><i class="fa fa-diamond fa-4x text-primary mb-3 sr-icons" data-aos="zoom-in" data-aos-duration="200" data-aos-once="true"></i>
                         <h3 class="mb-3">Sturdy Templates</h3>
