--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container my-auto">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h1 class="text-uppercase"><strong>My EPORTFOLIO</strong></h1>
+                    <h1 class="text-uppercase"><strong>My s</strong></h1>
                     <hr>
                 </div>
             </div>
